alterado nome de usuario

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           src="./assets/avatar.png"
           alt="Foto da Susy sorrindo, com seus pelos brancos, em frente à uma parede marrom."
         />
-        <p>@susybuffos</p>
+        <p>@susy</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
