--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UserName</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -20,7 +20,7 @@
           src="./assets/avatar.png"
           alt="Foto da Susy sorrindo, com seus pelos brancos, em frente à uma parede marrom."
         />
-        <p>@UserName</p>
+        <p>@susy</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
@@ -28,31 +28,16 @@
       </div>
       <ul>
         <li>
-          <a href="#" target="_blank">Link 1</a>
+          <a href="https://www.youtube.com" target="_blank">Canal no Youtube</a>
         </li>
         <li>
-          <a href="#" target="_blank">Link 2</a>
+          <a href="#">Baixe meu e-book</a>
         </li>
         <li>
-          <a href="#" target="_blank">Link 3</a>
+          <a href="#">Portifólio</a>
         </li>
         <li>
-          <a href="#" target="_blank">Link 4</a>
-        </li>
-        <li>
-          <a href="#" target="_blank">Link 4</a>
-        </li>
-        <li>
-          <a href="#" target="_blank">Link 4</a>
-        </li>
-        <li>
-          <a href="#" target="_blank">Link 4</a>
-        </li>
-        <li>
-          <a href="#" target="_blank">Link 4</a>
-        </li>
-        <li>
-          <a href="#" target="_blank">Link 4</a>
+          <a href="https://www.tiktok.com">Tiktok</a>
         </li>
       </ul>
       <div id="social-links">
